fix for mobile-menu top50px, for open dropdown-menu grey-line invisible

--- a/docs/less/blocks/_header.less
+++ b/docs/less/blocks/_header.less
@@ -34,6 +34,7 @@
     @media (min-width: 1024px) {
         margin: 18px 0 19px;
         height: 40px;
+        background-color: transparent;
     }
 }
 
